project/dowkproj-frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dowkproj-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /API/
        backend:
          service:
            name: dowkproj-backend-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dowkproj-frontend-svc
            port:
              number: 3002
